# qBittorrent

./: .appveyor.yml  .clang-tidy  .editorconfig  .gdbinit  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  520EC6F6.asc  5B7CC9A2.asc  AGENTS.md  AUTHORS  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  COPYING  Changelog  INSTALL  LICENSE  NEWS  NOTE.md  README  README.md  README.os2  SECURITY.md  TODO  WebAPI_Changelog.md  appveyor.yml  bootstrap.sh  build_dist.sh  codingStyleQtCreator.xml  comment_reply.txt  conf.pri.in  conf.pri.windows  configure  configure.ac  flake.nix  hash-1.patch  hash-2.patch  (+17 more)
src/: CMakeLists.txt  DLListDelegate.h  FeedDownloader.h  FeedDownloader.ui  FinishedListDelegate.h  FinishedTorrents.cpp  FinishedTorrents.h  GUI.cpp  GUI.h  Info.plist  MainWindow.ui  OSD.cpp  OSD.h  PreviewListDelegate.h  PropListDelegate.h  SearchListDelegate.h  SearchTab.cpp  SearchTab.h  TorrentFilesModel.h  TrackersAdditionDlg.h  TransferListDelegate.h  TransferListFiltersWidget.h  TransferListWidget.cpp  TransferListWidget.h  UPnP.cpp  UPnP.h  about.qrc  about.ui  about_imp.h  addTorrentDialog.ui  addnewtorrentdialog.cpp  addnewtorrentdialog.h  addnewtorrentdialog.ui  advancedsettings.h  allocationDlg.h  application.cpp  application.h  arborescence.h  autoexpandabledialog.cpp  autoexpandabledialog.h  (+217 more)
src/Icons/: copyright  qBittorrent.desktop  qbittorrent_mac.icns
src/app/: CMakeLists.txt  app.pri  application.cpp  application.h  applicationimpl.cpp  applicationimpl.h  applicationinstancemanager.cpp  applicationinstancemanager.h  cmdoptions.cpp  cmdoptions.h  filelogger.cpp  filelogger.h  legalnotice.cpp  legalnotice.h  localpeer.cpp  localpeer.h  main.cpp  options.cpp  options.h  pch.h  qmacapplication.h  signalhandler.cpp  signalhandler.h  stacktrace.cpp  stacktrace.h  stacktrace_win.h  stacktrace_win_dlg.h  stacktrace_win_dlg.ui  stacktracedialog.cpp  stacktracedialog.h  stacktracedialog.ui  upgrade.cpp  upgrade.h
src/base/: CMakeLists.txt  addtorrentmanager.cpp  addtorrentmanager.h  algorithm.h  application.h  applicationcomponent.cpp  applicationcomponent.h  asyncfilestorage.cpp  asyncfilestorage.h  base.pri  bitarray.cpp  bitarray.h  containercompat.h  digest32.h  exceptions.cpp  exceptions.h  filesystemwatcher.cpp  filesystemwatcher.h  freediskspacechecker.cpp  freediskspacechecker.h  global.h  iconprovider.cpp  iconprovider.h  implicitlyshared.h  indexrange.h  keyvaluedatastorage.cpp  keyvaluedatastorage.h  logger.cpp  logger.h  orderedset.h  path.cpp  path.h  pathfwd.h  pch.h  pluginsengine.cpp  pluginsengine.h  preferences.cpp  preferences.h  profile.cpp  profile.h  (+28 more)
src/core/: core.pri  dnsupdater.cpp  dnsupdater.h  downloadthread.cpp  downloadthread.h  filesystemwatcher.cpp  filesystemwatcher.h  fs_utils.cpp  fs_utils.h  httprequestparser.cpp  httpresponsegenerator.cpp  httptypes.h  iconprovider.cpp  iconprovider.h  logger.cpp  logger.h  misc.cpp  misc.h  notifier.cpp  notifier.h  preferences.cpp  preferences.h  qtracker.cpp  qtracker.h  scanfoldersmodel.cpp  scanfoldersmodel.h  scannedfoldersmodel.cpp  scannedfoldersmodel.h  smtp.cpp  smtp.h  torrentfilter.cpp  torrentfilter.h  torrentpersistentdata.cpp  torrentpersistentdata.h  tristatebool.cpp  tristatebool.h  types.h  unicodestrings.h
src/geoip/: LICENSE.txt  README  VERSION  geoip.pri  geoip.qrc  geoipmanager.cpp  geoipmanager.h
src/gui/: .directory  CMakeLists.txt  about.qrc  about.ui  about_imp.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addnewtorrentdialog.cpp  addnewtorrentdialog.h  addnewtorrentdialog.ui  addtorrentparamswidget.cpp  addtorrentparamswidget.h  addtorrentparamswidget.ui  advancedsettings.cpp  advancedsettings.h  application.h  applicationcomponent.h  applicationpalette.cpp  applicationpalette.h  autoexpandabledialog.cpp  autoexpandabledialog.h  autoexpandabledialog.ui  bandwidth_limit.ui  banlistoptions.cpp  banlistoptions.h  banlistoptions.ui  banlistoptionsdialog.cpp  banlistoptionsdialog.h  banlistoptionsdialog.ui  categoryfiltermodel.cpp  categoryfiltermodel.h  categoryfilterproxymodel.cpp  categoryfilterproxymodel.h  categoryfilterwidget.cpp  categoryfilterwidget.h  categoryoptionsdialog.cpp  categoryoptionsdialog.h  categoryoptionsdialog.ui  checkboxwordwrap.cpp  (+271 more)
src/icons/: .directory  .svgo.yml  README.md  iconconfig.json  icons.qrc  qBittorrent.desktop  systemiconconfig.json
src/lang/: TRANSLATION_INSTRUCTIONS  copyright  lang.pri  lang.qrc  qbittorrent_ar.qm  qbittorrent_ar.ts  qbittorrent_az@latin.ts  qbittorrent_be.qm  qbittorrent_be.ts  qbittorrent_bg.qm  qbittorrent_bg.ts  qbittorrent_bs.ts  qbittorrent_ca.qm  qbittorrent_ca.ts  qbittorrent_cs.qm  qbittorrent_cs.ts  qbittorrent_da.qm  qbittorrent_da.ts  qbittorrent_de.qm  qbittorrent_de.ts  qbittorrent_el.qm  qbittorrent_el.ts  qbittorrent_en.qm  qbittorrent_en.ts  qbittorrent_en_AU.ts  qbittorrent_en_GB.ts  qbittorrent_eo.ts  qbittorrent_es.qm  qbittorrent_es.ts  qbittorrent_et.ts  qbittorrent_eu.qm  qbittorrent_eu.ts  qbittorrent_fa.ts  qbittorrent_fi.qm  qbittorrent_fi.ts  qbittorrent_fr.qm  qbittorrent_fr.ts  qbittorrent_gl.qm  (+70 more)
test/: CMakeLists.txt  Readme.md  testalgorithm.cpp  testapicontroller.cpp  testbittorrentfilesearcher.cpp  testbittorrentpeeraddress.cpp  testbittorrentsharelimits.cpp  testbittorrenttorrentcontenthandler.cpp  testbittorrenttorrentdescriptor.cpp  testbittorrenttrackerentry.cpp  testconceptsexplicitlyconvertibleto.cpp  testconceptsstringable.cpp  testglobal.cpp  testhttpheader.cpp  testhttprangeparser.cpp  testhttprequestparser.cpp  testmcperror.cpp  testmcpserver.cpp  testmcpsessionmanager.cpp  testorderedset.cpp  testpath.cpp  testproptabbar.cpp  testproptabbar_macos.h  testproptabbar_macos.mm  testrssautodownloadrule.cpp  testsessionpaths.py  testsharelimits.cpp  testtildeexpansion.cpp  testtoplevelpayload.cpp  testutilsbytearray.cpp  testutilscompare.cpp  testutilsdatetime.cpp  testutilsfs.cpp  testutilsgzip.cpp  testutilshashvalue.cpp  testutilsio.cpp  testutilsjson.cpp  testutilsmisc.cpp  testutilsnet.cpp  testutilsnumber.cpp  (+2 more)
(+1894 files in other folders)
